# tktd_rna_pulse

./: .gitignore  .pre-commit-config.yaml  README.md  mod.py  plot.py  prob.py  pyproject.toml  requirements.txt  sim.py  test.sh
.github/workflows/: test.yml
data/: dataset.nc
scenarios/rna_pulse_3_6b_substance_independent_rna_protein_module/: settings.cfg
scenarios/rna_pulse_3_6b_substance_independent_rna_protein_module_fixed_sigma/: settings.cfg
scenarios/rna_pulse_3_6b_substance_independent_rna_protein_module_nuts/: settings.cfg
scenarios/rna_pulse_3_6b_substance_specific/: settings.cfg
scenarios/rna_pulse_3_6b_substance_specific_fixed_sigma/: settings.cfg
scenarios/rna_pulse_3_6b_substance_specific_nuts/: settings.cfg
scenarios/rna_pulse_3_6c_substance_independent_rna_protein_module/: settings.cfg
scenarios/rna_pulse_3_6c_substance_specific/: settings.cfg
scenarios/rna_pulse_3_6d_substance_independent_rna_protein_module/: experiment_selection_1.json  settings.cfg
scenarios/rna_pulse_4_substance_independent_rna_protein_module/: settings.cfg
scenarios/rna_pulse_4_substance_independent_rna_protein_module copy/: experiment_selection_1.json
scenarios/rna_pulse_4_substance_specific/: settings.cfg
scenarios/rna_pulse_5_substance_independent_rna_protein_module/: settings.cfg
scenarios/rna_pulse_5_substance_independent_rna_protein_module_full_dataset/: settings.cfg
scenarios/rna_pulse_5_substance_specific/: parameters_likelihood_landscape.txt  settings.cfg
scenarios/rna_pulse_5_substance_specific_full_dataset/: settings.cfg
scenarios/rna_pulse_6_substance_specific/: settings.cfg
scripts/: fig1_survival_fits.py  fig6_parameter_identifiability.py  likelihood_landscape.py  run_likelihoods.sh  run_scenarios.sh  tktd_rna_3_6c.ipynb  tktd_rna_3_6c_substance_independent.ipynb  tktd_rna_3_6c_substance_specific.ipynb  tktd_rna_3_6d.ipynb  tktd_rna_5_substance_specific.ipynb  tktd_rna_6_substance_specific.ipynb
tests/: test_simulation.py
tktd_rna_pulse/: __init__.py  data.py  mod.py  prob.py  sim.py
tktd_rna_pulse/plot/: __init__.py  likelihood.py  simulation.py
workflow/: Snakefile  config.yaml
workflow/rules/: common.smk  likelihood_landscape.smk  pymob_infer.smk
workflow/schemas/: config.schema.yaml
