[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tktd_rna_pulse"
version = "0.2.7"
authors = [
  { name="Florian Schunck", email="fluncki@protonmail.com" },
]
description = "Molecular TKTD: TKTD RNA Pulse model"
readme = "README.md"
requires-python = ">=3.10"
dependencies=[
    "pymob[numpyro] == 0.5.0a19",
    "guts_base @ git+ssh://git@gitlab.uni-osnabrueck.de/fschunck/guts_base.git@0.5.1",
    "expydb == 0.5.6",
    "openpyxl==3.1.2",
    "ipykernel==6.26.0",
    "ipywidgets==8.1.1",
    "bottleneck==1.3.7",
    "jupyterlab"
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
"Homepage" = "https://github.com/flo-schu/tktd_rna_pulse"
"Issue Tracker" = "https://github.com/flo-schu/tktd_rna_pulse/issues"

[tool.setuptools.packages.find]
include = ["tktd_rna_pulse*"]

[project.optional-dependencies]
dev = [
    "pytest >= 7.3", 
    "bumpver", 
    "pre-commit",
]

[project.scripts]
plot-likelihood-landscape = "tktd_rna_pulse.plot.likelihood:main"

[tool.bumpver]
current_version = "0.2.7"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"tktd_rna_pulse/__init__.py" = [
    '__version__ = "{version}"'
]
"README.md" = [
    'git clone git@github.com:flo-schu/tktd_rna_pulse/{version}'
]

[tool.pytest.ini_options]
markers = [
    "slow='mark test as slow.'"
]